k8s/resources/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-pod-clusterip-svc
  labels:
    app: k8s-pod-svc
spec:
  selector:
    app: k8s-pod-deployment
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
