k8s/resources/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-pod-nodeport-svc
  labels:
    app: k8s-pod-svc
spec:
  selector:
    app: k8s-pod-deployment
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 32080
  type: NodePort
